--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-md-8">
               <h1>Hi, my name is Mindy! </h1>
           
-          <p class="fs-5 col-md-8">A little about me: I'm currently a rising senior at the University of Missouri - St. Louis, and I'll be expecting to graduate Fall of 2023. I'm in love with the way technology has renovated and designed our world, and I want to contribute to this movement by integrating coding and new technology into the fields that interest me the most. I'm currently seeking an internship for the 2023 term. Outside of coding, I like to play my guitar and spend quality time with my friends. </p>
+          <p class="fs-5 col-md-8">A little about me: I'm currently a rising senior at the University of Missouri - St. Louis, and I'll be expecting to graduate Fall of 2023. I'm in love with the way technology has renovated and designed our world, and I want to contribute to this movement by integrating coding and new technology into the fields that interest me the most. I'm currently seeking an internship for the 2023 term. Outside of coding, I love to play my guitar and am obsessed with the ways in which media and art shapes our culture. </p>
           <div class="mb-5">
             <a href="mailto:mindyzheng13@gmail.com" class="btn btn-warning btn-lg px-4">Contact Me</a>
           </div>
@@ -72,15 +72,16 @@
       
             <div class="col-md-4 offset-md-2">
               <h2>Skills 🎸</h2>
-              <p>A list of my technical and soft skills:
+              <p>A list of my technical skills and a little more about me: 
 
               </p>
               <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Swing, Bootstrap, Eclipse, Netbeans, VSCode</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Creative, Communicative, Intepersonal Skills </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning/Interested: Adobe Creative Cloud/Design, Data/Analytics, SQL</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Creative, Communicative, Intepersonal </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Guitarist,  </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning/Interested: Adobe Creative Cloud/Design, Data Analytics, SQL</strong> </li>
 
 
 
