--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Swing, Bootstrap, Eclipse, Netbeans, VSCode</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Google Workspace</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Creative, Communicative, Intepersonal </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Guitarist,  </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning/Interested: Adobe Creative Cloud/Design, Data Analytics, SQL</strong> </li>
