Added another recent project to my webpage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindy Zheng - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="style2.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c73aabb524.js" crossorigin="anonymous"></script>
     </head>
 
@@ -53,6 +53,14 @@
                 </ul> 
                 </ul>
 
+                <ul class="fa-ul" style="--fa-li-width: 2em;">
+                  <li><span class="first"><i class="fa-solid fa-check-square"></i></span> <strong>Depression Prediction Model</strong></a></li>
+                  <ul class="sub-ul">
+                    <li> Class project intended to solve a problem using Data Science principles. I wanted to integrate my passion for Behavioral and Psychological Sciences with the knowledge I obtain from learning about machine learning, data collection and exploration, and analyzing and evaluating a binary classification problem. This is still a work in progress [will be updated by end of April]. </li>
+                    </ul>
+
+                    </ul>
+
               <ul class="fa-ul" style="--fa-li-width: 2em;">
                   <li><span class="first"><i class="fa-solid fa-check-square"></i></span> <a href ="https://github.com/mindy-zheng/Calculator"><strong>Calculator</strong></a></li>
                   <ul class="sub-ul">
@@ -77,12 +85,12 @@
 
               </p>
               <ul class="fa-ul">
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Swing, Bootstrap, Eclipse, Netbeans, VSCode</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Google Workspace</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Creative, Communicative, Intepersonal </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Guitarist,  </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning/Interested: Adobe Creative Cloud/Design, Data Analytics, SQL</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS, PHP, SQL(MySQL)</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Jupyter Notebook, Numpy, Pandas, Scikit-learn</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Git</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Personal Attributes: Creative, Communicative, Intepersonal  Harmonious, Goofy </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician, Student  </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning: Machine Learning</strong> </li>
 
 
 
@@ -186,12 +194,12 @@
 
               </p>
               <ul class="fa-ul">
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS, SQL </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Swing, Bootstrap, Eclipse, Netbeans, VSCode</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Google Workspace</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Creative, Communicative, Intepersonal </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Guitarist,  </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning/Interested: Adobe Creative Cloud/Design, Data Analytics, SQL</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Soft Skills: Creative, Communicative, Intepersonal, Curious, Harmonious </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning: iOS Applications </strong> </li>
 
 
 
