--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
 
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/77aVzTvL7ReejYbYt1bXlg?utm_source=generator" width="50%" height="300px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/77aVzTvL7ReejYbYt1bXlg?utm_source=generator" width="50%" height="380px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     
          
@@ -89,7 +89,7 @@
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS, PHP, SQL(MySQL)</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Jupyter Notebook, Numpy, Pandas, Scikit-learn</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Git</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Personal Attributes: Creative, Communicative, Intepersonal  Harmonious, Silly </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Personal Attributes: Creative, Communicative, Intepersonal  Harmonious, Goofy </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician, Student  </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning: Machine Learning</strong> </li>
 
