updated skills sect.

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
               </p>
               <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS, PHP, SQL(MySQL)</strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Jupyter Notebook, Numpy, Pandas, Scikit-learn</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Jupyter Notebook, Numpy, Pandas, Scikit-learn, Data Visualization </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Git</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Personal Attributes: Creative, Communicative, Intepersonal  Harmonious, Goofy </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Accolades: Dean's List (4x) ,GPA: 3.68 </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician, Student  </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning: Machine Learning</strong> </li>
 
