--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Jupyter Notebook, Numpy, Pandas, Scikit-learn, Data Visualization </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Git</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Personal Attributes: Creative, Communicative, Intepersonal  Harmonious, Goofy </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Academic Achievements: Dean's List (6x) ,GPA: 3.68 </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician, Student  </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Learning: Machine Learning</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Academic Achievements: Dean's List (6x), GPA: 3.68 </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician/Guitarist  </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Interested In: Machine Learning</strong> </li>
 
 
 
