--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 
               </p>
               <ul class="fa-ul">
-                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS, JavaScript, PHP, SQL(MySQL)</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Java, Python, C++, HTML, CSS, JavaScript, PHP, SQL (MySQL)</strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Jupyter Notebook, NumPy, Pandas, Scikit-learn, Data Visualization </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Microsoft Office, Apache, Git </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Personal Attributes: Creative, Communicative, Intepersonal  Harmonious, Goofy </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Academic Achievements: Dean's List (6x), GPA: 3.68 </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician/Guitarist  </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Interested In: Machine Learning</strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Interested In: Recommendation Engines (plan to make a music recommendation tool to add onto my existing Spotify project) </strong> </li>
 
 
 
