--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Personal Attributes: Creative, Communicative, Intepersonal  Harmonious, Goofy </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Academic Achievements: Dean's List (6x), GPA: 3.68 </strong> </li>
                 <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span><strong>Misc: Musician/Guitarist  </strong> </li>
-                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Interested In: Recommendation Engines (plan to make a music recommendation tool to add onto my existing Spotify project) </strong> </li>
+                <li><span class="fa-li"><i class="fa-solid fa-play"></i></span><strong> Currently Interested In: Recommendation Engines (plan to make a music recommendation tool to add onto my existing project with Spotify) </strong> </li>
 
 
 
